Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -5,7 +5,7 @@
     -webkit-transform-style: preserve-3d;
 }
 
-.parallax-container::before {
+.parallax-container::after {
     content: "";
     width: 100vw;
     height: 100%;
@@ -13,7 +13,6 @@
     background-image: url("../assets/img/main-bg.png");
     background-position: top center;
     background-size: cover;
-    z-index: -1;
     transform: translateZ(-100px) scale(2);
 }
 
@@ -202,8 +201,6 @@
     .parallax-container {
         display: flex;
         flex-direction: column;
-        transform-style: unset;
-        -webkit-transform-style: unset;
     }
     .truck {
         position: static;
